# services/BrainzDevelopers/internal/router/router.go
@@ -9,6 +9,8 @@ import (
 func Register(h *server.Hertz, ah *handler.AuthHandler, kmh *handler.KeysManagementHandler) {
 	h.POST("/register", ah.Register)
 	h.POST("/login", ah.Login)
+	h.GET("/profile", ah.GetProfile)
+	h.GET("/keys/usage", kmh.GetApiKeysUsage)
 	h.GET("/keys", kmh.GetApiKeys)
 	h.POST("/key", kmh.CreateApiKey)
 	h.DELETE("/key", kmh.DeleteApiKey)
